--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    background-color: black;
+    background-color: red;
 }
 
 body{
@@ -44,3 +44,4 @@ img {
     width: 150px;
     height: 100px;
 }
+
