--- a/src/styleLogo.css
+++ b/src/styleLogo.css
@@ -2,3 +2,19 @@
     width: 210px;
     height: 210px;
 }
+
+.logo {
+    animation-duration: 5s;
+    animation-name: slidein;
+    overflow: hidden;
+}
+@keyframes slidein {
+    from{
+        margin-left: 100%;
+        width: 200%;
+    }
+
+to {
+    margin-left: 0%;
+    width: 100%;
+}}
