--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
     background-color: black;
 }
+@keyframes fadeBackground {
+    from {background-color: white;}
+    to {background-color: black;}
+}
 
 body{
     margin: 0;
@@ -37,11 +41,22 @@ td {
     text-align: center;
     font-size: 50px;
     color: white;
+    animation: fadeBackground 3s;
+    animation-fill-mode: forwards;
 }
 
 img {
     border-radius: 25px;
     width: 150px;
     height: 100px;
+    animation: fadeIn 5s;
 }
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+    
+}
+
+
+
 
