--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@ color: azure;
 text-align: center;
 font-size: 50px;
 background-color: black;
+  animation: fadeBackground 3s;
+    animation-fill-mode: forwards;
 
 }
 
@@ -11,6 +13,8 @@ table tr,td,th {
   width: 1000px;
   height: 100px;
   color: white;
+  animation: fadeBackground 3s;
+    animation-fill-mode: forwards;
 }
 
 
@@ -20,5 +24,10 @@ table tr,td,th {
 .div {
   color: white;
 
+}
+@keyframes fadeBackground {
+  from {background-color: white;}
+  to {background-color: black;}
+  
 }
 
