--- a/src/styleLogo.css
+++ b/src/styleLogo.css
@@ -18,3 +18,15 @@ to {
     margin-left: 0%;
     width: 100%;
 }}
+
+li {
+    animation: animate 10s;
+}
+
+@keyframes animate {
+    0%{
+        width: 0px;
+        height: 0px;
+    }
+    
+}
