--- a/src/styleLogo.css
+++ b/src/styleLogo.css
@@ -10,14 +10,15 @@
 }
 @keyframes slidein {
     from{
-        margin-left: 100%;
-        width: 200%;
+       position: relative;
+       left:-500px;
     }
 
 to {
-    margin-left: 0%;
-    width: 100%;
+    position:relative;
+    left: 0px;
 }}
+
 
 li {
     animation: animate 10s;
