--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@ table tr,td,th {
   width: 1000px;
   height: 100px;
   color: white;
-  animation: fadeBackground 3s;
-    animation-fill-mode: forwards;
+  animation: fadeIn 5s;
+ 
 }
 
 
@@ -25,9 +25,7 @@ table tr,td,th {
   color: white;
 
 }
-@keyframes fadeBackground {
-  from {background-color: white;}
-  to {background-color: black;}
-  
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
-
