--- a/src/styles.css
+++ b/src/styles.css
@@ -31,11 +31,6 @@ body{
 
 }
 
-.nav a{
-    color: inherit;
-    text-decoration: none;
-    padding: 10px;
-}
 
 td {
     text-align: center;
@@ -64,9 +59,19 @@ ol {
     color:white;
     font-size: 35px;
 }
-.Login {
-    animation: Opacity 6s:
+.Admin {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+animation: Opacity 6s;
+
 }
 
+.Login {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    animation: Opacity 6s;
+}
 
 
