--- a/src/styles.css
+++ b/src/styles.css
@@ -73,5 +73,11 @@ animation: Opacity 6s;
     padding: 10px;
     animation: Opacity 6s;
 }
+.HideX{
+    color: black;
+    text-decoration: none;
+    padding: 10px;
+}
+
 
 
