--- a/src/Pouf.css
+++ b/src/Pouf.css
@@ -6,5 +6,10 @@
 h1{
     text-align: center;
 }
+h2{
+    color: white;
+    text-align: center;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
+}
 
 
