--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,14 @@ table tr,td,th {
     0% {opacity: 0;}
     100% {opacity: 1;}
 }
+.Quest{
+  color: white;
+  text-align: center;
+  
+}
+button{
+  color: white;
+}
+input {
+  background-color: white;
+}
