--- a/src/styles.css
+++ b/src/styles.css
@@ -73,6 +73,14 @@ animation: Opacity 6s;
     padding: 10px;
     animation: Opacity 6s;
 }
+.Souv{
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    animation: Opacity 6s;
+
+}
+
 .HideX{
     color: black;
     text-decoration: none;
