--- a/src/Pouf.css
+++ b/src/Pouf.css
@@ -105,7 +105,7 @@ li {
 .liste{
     text-align: center;
     padding: 20px;
-    border: 1px solid black;
+    border: 1px white;
     font-size: 30px;
     list-style-type: none;
 }
